Changelog
=========

2.2.1 (unreleased)
----------------

- Nothing changed yet.


2.2 (2012-07-02)
----------------

- Change BaseRegistryTool.deferredGetContent method to use
  OFS.File.update_data instead of OFS.File.manage_upload. The 
  manage_upload method is a "ZMI" API.  By calling manage_upload
  an ObjectModifiedEvent would be generated for every resource
  served from the registry.  Let's do less work.
  [runyaga]

2.1.2 (2012-05-25)
------------------

- Fix test failure under Plone 4.2.
  [hannosch]

- using hashlib.md5 (fixing a deprecation warning)
  [ajung]


2.1.1 (2012-05-07)
------------------

- Added theme-parameter for getResourceContent for JavaScriptRegistry.
  Even if it is unused it now allows the same arguments as the
  BaseRegistry
  [tom_gross]

- Added support for OFS.Image.File-objects using OFS.Image.PData
  This fixes https://dev.plone.org/ticket/12479
  [datakurre]

2.1 (2012-04-18)
----------------

- Use iterative magic number generation based on the properties of all
  included resources (for each concatenated resource).

  This fixes an issue with external caches where resources for
  different content would sometimes get assigned the same resource id
  (due to the previous implementation using a random integer), making
  it impossible to cache a resource correctly without additional
  information.
  [malthe]


2.1a1 (2011-06-28)
------------------

- Add bundle concept - a bundle is a string tag against a resource, which can
  be used to filter resources by theme. Each theme has a list of enabled
  bundles, managed on the 'Bundles' tab in the ZMI (note that this is global).
  [optilude]

- Fix handling of the purge attribute on import.
  [rossp]


2.0.8 (2012-03-14)
------------------

- Add time element. This is necessary for the generated ids to update
  on any save, to reflect possible updates in the served content.
  [malthe]


2.0.7 (2012-03-14)
------------------
